--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify Widget</title>
+    <title>Special Message for You ❤️</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My Spotify Playlist</h1>
-    <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DXcBWIGoYBM5M" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    <div class="container">
+        <h1>A Special Message for You ❤️</h1>
+        <a href="love-story.html" class="btn">Open Your Surprise</a>
+    </div>
+
 </body>
 </html>
