--- a/love-story.html
+++ b/love-story.html
@@ -11,12 +11,12 @@
         <h1>Our Love Story ❤️</h1>
         <div class="timeline">
             <div class="event">
-                <h2>🌟 First Meeting</h2>
+                <h2>Crush 🥰</h2>
                 <p>That magical moment when we first met and everything changed.</p>
             </div>
             <div class="event">
-                <h2>💕 First Date</h2>
-                <p>A beautiful day spent together, filled with laughter and joy.</p>
+                <h2>💕 First Meet</h2>
+                <p>A beautiful day spent together, filled with happiness...</p>
             </div>
             <div class="event">
                 <h2>💍 The Proposal</h2>
